--- a/force-app/main/default/lwc/bmiCalculator/bmiCalculator.html
+++ b/force-app/main/default/lwc/bmiCalculator/bmiCalculator.html
@@ -1,3 +1,13 @@
 <template>
-    <div> Hello I am BMI Calculator Component </div>
+    <div class="app">
+        <div class="box">
+            <h1>BMI Calculator</h1>
+            <form>
+
+            </form>
+            <div class="info-wrapper">
+
+            </div>
+        </div>
+    </div>
 </template>
